# aaaaaayq

./: .gitignore
.github/workflows/: build_android.yml  build_ios.yml  build_windows.yml
GGELUA3/Dependencies/HP-Socket/Linux/project/: Version.props  hpsocket-2017.sln  hpsocket-2019.sln  hpsocket-2022.sln
GGELUA3/Dependencies/HP-Socket/Linux/src/: UdpServer.cpp
GGELUA3/Dependencies/HP-Socket/Windows/: Change-Log.txt
GGELUA3/Dependencies/HP-Socket/Windows/Project/: HPSocket-2010.sln  HPSocket-2015.sln  HPSocket-2017.sln  HPSocket-2019.sln  HPSocket-2022.sln
GGELUA3/Dependencies/SDL/VisualC/: SDL.sln
GGELUA3/Dependencies/SDL/VisualC-WinRT/: SDL-UWP.sln  SDL-UWP.vcxproj
GGELUA3/Dependencies/SDL/VisualC/SDL/: SDL.vcxproj
GGELUA3/Dependencies/SDL/VisualC/SDLmain/: SDLmain.vcxproj
GGELUA3/Dependencies/SDL_image/: IMG_stubs_android.c
GGELUA3/Dependencies/SDL_image/VisualC/: SDL_image.sln  SDL_image.vcxproj
GGELUA3/Dependencies/SDL_image/VisualC-WinRT/: SDL_image-UWP.sln
GGELUA3/Dependencies/SDL_ttf/VisualC/: SDL_ttf.sln
GGELUA3/Dependencies/SDL_ttf/VisualC-WinRT/: SDL_ttf-UWP.sln  SDL_ttf-UWP.vcxproj
GGELUA3/Dependencies/SDL_ttf/VisualC/showfont/: showfont.vcxproj
GGELUA3/Dependencies/SQLite3MultipleCiphers/: Android.mk
GGELUA3/Dependencies/audio_codecs/flac-1.3.3/: FLAC-vs2005.sln  FLAC.sln
GGELUA3/Dependencies/libhv/event/: overlapio.c
GGELUA3/Dependencies/libhv/evpp/: Channel.h  TcpClient.h
GGELUA3/Dependencies/libsndfile/: CMakeLists.txt
GGELUA3/Dependencies/libsndfile/include/: sndfile.h
GGELUA3/Dependencies/lua/: ldump.c  lopcodes.c  lua.h  luac.c  luaconf.h  lundump.c  lundump.h
GGELUA3/Dependencies/openssl/include/openssl/: configuration.h
GGELUA3/Projects/: .gitignore  .vsconfig  android.md  windows.md
GGELUA3/Projects/android-vs/: .gitignore  Android.sln  Directory.Build.targets  build_android.ps1  build_openssl_android.ps1  clean_android_build.py  clean_apk_template.py  deploy_apk.py  lua.props
GGELUA3/Projects/android-vs/app/GGELUA/: .gitignore  GGELUA.androidproj  build.gradle  gradle.properties  settings.gradle.template
GGELUA3/Projects/android-vs/dep/HPSocket/: HPSocket.vcxproj  HPSocket.vcxproj.filters
GGELUA3/Projects/android-vs/dep/freetype/: freetype.vcxproj  freetype.vcxproj.filters  ver.props
GGELUA3/Projects/android-vs/dep/libflac/: libflac.vcxproj  libflac.vcxproj.filters  ver.props
GGELUA3/Projects/android-vs/dep/libjpeg/: libjpeg.vcxproj  libjpeg.vcxproj.filters
GGELUA3/Projects/android-vs/dep/libmodplug/: libmodplug.vcxproj  libmodplug.vcxproj.filters
GGELUA3/Projects/android-vs/dep/libmpg123/: libmpg123.vcxproj  libmpg123.vcxproj.filters  ver.props
GGELUA3/Projects/android-vs/dep/libogg/: libogg.vcxproj  libogg.vcxproj.filters
GGELUA3/Projects/android-vs/dep/libpng/: libpng.vcxproj  libpng.vcxproj.filters  ver.props
GGELUA3/Projects/android-vs/dep/libsndfile/: config.h  libsndfile.vcxproj  libsndfile.vcxproj.filters  sndfile.h
GGELUA3/Projects/android-vs/dep/libwebp/: libwebp.vcxproj  libwebp.vcxproj.filters  ver.props
GGELUA3/Projects/android-vs/dep/main/: main.vcxproj  main.vcxproj.filters
GGELUA3/Projects/android-vs/dep/sqlite3/: sqlite3.vcxproj  sqlite3.vcxproj.filters
GGELUA3/Projects/android-vs/dep/zlib/: zlib.vcxproj  zlib.vcxproj.filters
GGELUA3/Projects/android-vs/dll/SDL2/: SDL2.vcxproj  SDL2.vcxproj.filters
GGELUA3/Projects/android-vs/dll/SDL_Mixer_X/: SDL_mixer.vcxproj  SDL_mixer.vcxproj.filters
GGELUA3/Projects/android-vs/dll/SDL_image/: SDL_image.vcxproj  SDL_image.vcxproj.filters
GGELUA3/Projects/android-vs/dll/SDL_ttf/: SDL_ttf.vcxproj  SDL_ttf.vcxproj.filters
GGELUA3/Projects/android-vs/dll/ggelua/: ggelua.vcxproj  ggelua.vcxproj.filters
GGELUA3/Projects/android-vs/dll/lua/: lua.vcxproj  lua.vcxproj.filters
GGELUA3/Projects/android-vs/grr/mygxy/: mygxy.vcxproj
GGELUA3/Projects/android-vs/lib/cjson/: cjson.vcxproj  cjson.vcxproj.filters
GGELUA3/Projects/android-vs/lib/gastar/: gastar.vcxproj  gastar.vcxproj.filters
GGELUA3/Projects/android-vs/lib/ghpsocket/: ghpsocket.vcxproj  ghpsocket.vcxproj.filters
GGELUA3/Projects/android-vs/lib/ghv/: ghv.vcxproj
GGELUA3/Projects/android-vs/lib/gsdl2/: gsdl2.vcxproj  gsdl2.vcxproj.filters
GGELUA3/Projects/android-vs/lib/lsqlite3/: lsqlite3.vcxproj  lsqlite3.vcxproj.filters
GGELUA3/Projects/ios/: CMakeLists.txt  Info.plist.in  build_ios.sh  build_openssl_ios.sh  ios.toolchain.cmake
GGELUA3/Projects/ios/compat/: fw_stub.c  hconfig.h  openssl_fw_stub.c
GGELUA3/Projects/ios/compat/sys/: random.h
GGELUA3/Projects/windows/: Windows.sln  dll.props  ggelua_all.def  ggelua_all.exp  lib.props  lua.props
GGELUA3/Sources/app/lua/: lua.c
GGELUA3/Sources/dll/lua/: Android.mk  luauser.c  luauser.h
GGELUA3/Sources/grr/gxy2/: SDL_list.c  map.c  map.h  wdf.c  wdf.h
GGELUA3/Sources/grr/mygxy/: SDL_list.c  hash.c  lua_proxy.c  lua_proxy.h  map.c  sdl_proxy.h  tcp.c  tcp.h  wdf.c  wpk.h
GGELUA3/Sources/lib/cjson/: lua_cjson.c
GGELUA3/Sources/lib/gastar/: Android.mk  DLinkList.cpp  DLinkList.h  lua.c
GGELUA3/Sources/lib/ggelua/: Android.mk  core.c  hash.c  lbase64.c  lfs.c  lua_aes.c  lua_cmsgpack.c  luaopen.h  main.c  md5.c  script.c
GGELUA3/Sources/lib/ghpsocket/: HP_Download.cpp  HP_HttpAgent.cpp  HP_HttpAgent.h  HP_PackAgent.cpp  HP_PackClient.cpp  HP_PackServer.cpp  HP_PackServer.h  HP_PullAgent.h  HP_PullServer.cpp  HP_PullServer.h  HP_TcpClient.cpp  HP_TcpClient.h  HP_TcpServer.cpp  HP_TcpServer.h  HP_UdpNode.cpp  HP_UdpNode.h  common.cpp
GGELUA3/Sources/lib/ghv/: ghv_crypto.h  ghv_net_protocol.h  ghv_tcp_client.cpp
GGELUA3/Sources/lib/gimgui/: help.cpp  help.h  lua_DrawList.cpp  lua_ImGui.cpp  main.cpp
GGELUA3/Sources/lib/gsdl2/: Android.mk  audio.c  hints.c  keyboard.c  log.c  messagebox.c  opengl.c  platform.c  power.c  render.c  rwops.c  sensor.c  shape.c  surface.c  system.c  thread.c  timer.c  video.c
GGELUA3/Sources/lib/lsqlite3/: Android.mk
GGELUA3/tools/: opcode_map.json  shuffle_opcodes.py
docs/superpowers/plans/: 2026-04-02-mygxy-multithread-refactor.md
(+405 files in other folders)
